--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property=“og:title” content=“NOD 링크 모음” />
     <meta property=“og:description” content=“3d motion portfolio link” />
     <meta property=“og:image” content=“사과와 고양이.jpg” />
-    <title>르탄이 - 프로필 링크</title>
+    <title>NOD - 링크모음</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
         * {
@@ -86,10 +86,10 @@
         <div class="profile"></div>
         <h1 class="main"> NOD</h1>
         <p class="sub"> 3D MOTION DESIGNER</p>
-        <a target="_blank" href="https://spartacodingclub.kr/">Youtube</a>
-<a target="_blank" href="https://hanghae99.spartacodingclub.kr/">Blog</a>
-<a target="_blank" href="https://chang.spartacodingclub.kr/">Behance</a>
-<a target="_blank" href="https://ddingdong.spartacodingclub.kr/">Notefolio</a>
+        <a target="_blank" href="https://www.youtube.com/">Youtube</a>
+<a target="_blank" href="https://blog.naver.com/nod451">Blog</a>
+<a target="_blank" href="https://www.behance.net/">Behance</a>
+<a target="_blank" href="https://notefolio.net/nod451">Notefolio</a>
 
     </div>
 </body>
